--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
+							<img src="https://github.com/maranatha443/maranatha443.github.io/blob/main/images/Michael-removebg-preview.jpg" alt="Flowers in Chania">
 							<span class="icon fa-gem"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Gabriel Ojeifo Michael</h1>
-								<p>AQuality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
+								<p>A Quality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
 							</div>
 						</div>
 						<nav>
@@ -342,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Design: Maranatha Concepts<a href="https://https://maranatha443.github.io"</a>.</p>
 					</footer>
 
 			</div>
