--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="https://github.com/maranatha443/maranatha443.github.io/blob/main/images/Michael-removebg-preview.jpg" alt="Flowers in Chania">
-							<span class="icon fa-gem"></span>
+							<img src="https://github.com/maranatha443/maranatha443.github.io/blob/main/images/Michael-removebg-preview.jpg">
+							<--!<span class="icon fa-gem"></span>-->
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Design: Maranatha Concepts<a href="https://https://maranatha443.github.io"</a>.</p>
+						<p class="copyright">&copy; Design: <a href="https://https://maranatha443.github.io"</a>Maranatha Concepts.</p>
 					</footer>
 
 			</div>
