--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Design: <a href="https://https://maranatha443.github.io"</a>Maranatha Concepts.</p>
+						<p class="copyright">&copy; Design: <a href="maranatha443.github.io"</a>Maranatha Concepts.</p>
 					</footer>
 
 			</div>
