--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="image/x-icon" href="/images/Michael-removebg-preview.jpg">
 	</head>
 	<body class="is-preload">
 
@@ -20,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="https://github.com/maranatha443/maranatha443.github.io/blob/028c7baf86dc4465b4ee43e656821207e342e31b/images/Michael-removebg-preview.jpg">
+							<img src="/images/Michael-removebg-preview.jpg">
 						</div>
 						<div class="content">
 							<div class="inner">
