--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Gabriel Michael O.</title>
+		<title>Michael's Corner</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,18 +21,25 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-house"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Gabriel Ojeifo Michael</h1>
-								<p>Professionalism, Adaptability, coupled with Efficiency.</p>
+								<h1>Welcome to  Michael's Corner</h1>
+								<style>
+									img {
+									  border-radius: 50%;
+									}
+									</style>
+								<img src="images/mic.jpg" alt="mic" style="width:128px;height:128px;">
+								
+								<h3><p>Integrity, Professionalism, Adaptability, coupled with Efficiency. Feel free to <a href="#work">explore.</a></p></h3>
 							</div>
 						</div>
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Projects</a></li>
 								<li><a href="assets/Michael-Gabriel.pdf">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -46,13 +53,25 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="/images/Michael-removebg-preview.jpg" alt="Gabriel Michael O." width="960" heigth="320"/></span>
+								<style>
+									img {
+									  border-radius: 50%;  
+									}
+									.center {
+										display: block;
+										margin-left: auto;
+										margin-right: auto;
+										width: 50%;
+									}
+
+									</style>
+									<img src="images/Michael-removebg-preview.jpg" style="width:500px;height:300px;" class="center"/>
 								<p>A Quality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
 							</article>
 
 						<!-- Personal Projects -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
@@ -68,7 +87,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:maranatha443@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
