--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="/images/fav.ico">
 	</head>
 	<body class="is-preload">
 
@@ -69,13 +69,12 @@
 								<p>A Quality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
 							</article>
 
-						<!-- Personal Projects -->
+						Work -->
 							<article id="work">
 								<h2 class="major">Projects</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
-							</article>
+								<span class="image main"><img src="images/projects.jpg" alt="Projects" class="center" style="width:500px;height:200px;" /></span>
+								<p>For now all related projects can be found in my github repositry for <a href="https://github.com/maranatha443/My-ML-Projects">Machine Learning.</a>
+								</article>
 
 						<!-- Resume 
 							<article id="about">
