--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<article id="work">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/projects.jpg" alt="Projects" class="center" style="width:500px;height:200px;" /></span>
-								<p>For now all related projects can be found in my github repositry for <a href="https://github.com/maranatha443/My-ML-Projects">Machine Learning.</a>
+								<p>For now, all related projects can be found in my github repositry for <a href="https://github.com/maranatha443/My-ML-Projects">Machine Learning.</a>
 								</article>
 
 						<!-- Resume 
