--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<p>A Quality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
 							</article>
 
-						Work -->
+						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/projects.jpg" alt="Projects" class="center" style="width:500px;height:200px;" /></span>
