--- a/index.html
+++ b/index.html
@@ -73,7 +73,16 @@
 							<article id="work">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/projects.jpg" alt="Projects" class="center" style="width:500px;height:200px;" /></span>
-								<p>For now, all related projects can be found in my github repositry for <a href="https://github.com/maranatha443/My-ML-Projects">Machine Learning.</a>
+								<p>All projects can be found in my github repositry:
+									<p>1.<a href="https://github.com/maranatha443/FBI-Gun-Data">FBI Gun Data Analysis:</a> This is a project with a dataset containing details about background checks carried out in the United States of America(USA) by the Federal Bureau of Intelligence(FBI) within a specified time period. It is one of three Udacity Nanodegree related projects. 
+ 
+2. <a href="https://github.com/maranatha443/Farmer-Adoption-Prediction-and-Clustering">Farmers' Technology Adoption Analysis:</a>This is a personal project with objectives of: 
+  
+ a. Investigating the factors influencing adoption of innovation among farmers(hopefully generalizable). This will be achieved through Exploratory Data Analysis 
+ b. Predicting Farmers' likelihood to adopt innovation. A model will be trained with the available data to achieve this. 
+ c. Assign individual farmers to various adoption clusters(Innovators....Laggards). Clustering will come into play, here. 
+  
+ </p>
 								</article>
 
 						<!-- Resume 
