--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 										WeRateDogs. From the documentation given, WeRateDogs is a Twitter account that rates people's dogs with a humorous comment 
 										about the dog.</p>
 								
-									<p>6. <a href="https://github.com/maranatha443/Predicting-Stock-Prices>Predicting Stock Prices:</a>
+									<p>6. <a href="https://github.com/maranatha443/Predicting-Stock-Prices">Predicting Stock Prices:</a>
 										This is to demonstrate time series knowledge via prediction of stock prices from historical data, and is another beginner
 										project inspired by <a href="https://www.dataquest.io/">Data quest.</a></p>
 										
