--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
+								<p> Send me a mail at maranatha443@gmail.com.
 								<form method="post" action="mailto:maranatha443@gmail.com">
 									<div class="fields">
 										<div class="field half">
