--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/projects.jpg" alt="Projects" class="center" style="width:500px;height:200px;" /></span>
 								<p>All projects can be found in my github repositry:
+									
+									<p>1. <iframe src="https://docs.google.com/document/d/e/2PACX-1vTyJDTsSR_8jRXanAEqErAeGaOhZlmFo6igpHctBPGgPr1XXOpzGJbP7Gl-fNr-UMYnbiIPD4caHWL_/pub?embedded=true"></iframe>
+										This is  an article using data gathered from World Bank to investigate the Nigeria government funding 
+										in Education for a period of 10 years, spanning 2010-2022.</p> 
+								
 									<p>1.<a href="https://github.com/maranatha443/FBI-Gun-Data">FBI Gun Data Analysis:</a> This is a project with a 
 										dataset containing details about background checks carried out in the United States of America(USA) by 
 										the Federal Bureau of Intelligence(FBI) within a specified time period. It is one of three Udacity 
