--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p> Send me a mail at maranatha443@gmail.com.
+								<p> Send me a mail at maranatha443@gmail.com or link up with me via the media below:
+								<!--
 								<form method="post" action="mailto:maranatha443@gmail.com">
 									<div class="fields">
 										<div class="field half">
@@ -154,6 +155,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
+								-->
 								<ul class="icons">
 									<li><a href="https://twitter.com/maranathaJesu" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<!-- <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
