--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 									</style>
 									<img src="images/Michael-removebg-preview.jpg" style="width:500px;height:300px;" class="center"/>
-								<p>A Quality-oriented Data Scientist/Agriculturist with 2+ years of experience and a proven knowledge of data science, Research design, and Technical reporting, aiming to apply said skills in a productive workspace.</p>
+								<p>An efficient professional with over 4 years experience in research design, data analysis, and technical reporting. Possessing a Higher National Diploma in Agricultural Extension and Management from Federal College of Forestry Jos, with a 3.59/4.0 GPA and Distinction grade. Seeking a challenging role where contributions can be made towards achieving consistent and sustainable results.</p>
 							</article>
 
 						<!-- Work -->
@@ -77,7 +77,7 @@
 									
 									<p>1.<a href="https://docs.google.com/document/d/e/2PACX-1vTyJDTsSR_8jRXanAEqErAeGaOhZlmFo6igpHctBPGgPr1XXOpzGJbP7Gl-fNr-UMYnbiIPD4caHWL_/pub">
 										Analysis of Education Funding and Government Expenditure Trends in Nigeria: A Concerning Decline.:</a> 
-										This is an article using data gathered from World Bank to investigate the Nigeria government funding 
+										This is an article using data gathered from World Bank to investigate the Nigerian government funding 
 										in Education for a period of 10 years, spanning 2010-2022.</p>
 								
 									<p>2.<a href="https://github.com/maranatha443/FBI-Gun-Data">FBI Gun Data Analysis:</a> This is a project with a 
