--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 
 									</style>
 									<img src="images/Michael-removebg-preview.jpg" style="width:500px;height:300px;" class="center"/>
-								<p>An efficient professional with over 4 years experience in research design, data analysis, and technical reporting. Possessing a Higher National Diploma in Agricultural Extension and Management from Federal College of Forestry Jos, with a 3.59/4.0 GPA and Distinction grade. Seeking a challenging role where contributions can be made towards achieving consistent and sustainable results.</p>
+								<p>A skilled data professional with over 4 years of experience in research design, data analysis, and data visualization. Equipped with a Higher National Diploma in Agricultural Extension and Management and extensive training in data analytics tools like SQL, Python, R, Tableau, Power BI, and statistical software like SPSS and Stata.</p>
+
+<p>Adept at conducting targeted surveys, analyzing data to uncover insights, and generating comprehensive reports to drive data-driven decision-making. Proven ability to develop interactive dashboards and data visualizations for effective communication of complex information.</p>
 							</article>
 
 						<!-- Work -->
