--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Projects</a></li>
 								<li><a href="assets/Gabriel-Michael-O.pdf">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -68,7 +68,7 @@
 									<img src="images/Michael-removebg-preview.jpg" style="width:500px;height:300px;" class="center"/>
 								<p>A skilled data professional with over 4 years of experience in research design, data analysis, and data visualization. Equipped with a Higher National Diploma in Agricultural Extension and Management and extensive training in data analytics tools like SQL, Python, R, Tableau, Power BI, and statistical software like SPSS and Stata.</p>
 
-<p>Adept at conducting targeted surveys, analyzing data to uncover insights, and generating comprehensive reports to drive data-driven decision-making. Proven ability to develop interactive dashboards and data visualizations for effective communication of complex information.</p>
+<p>Adept at conducting targeted surveys, analyzing data to uncover insights, and generating comprehensive reports to drive data-driven decision-making. With demonstrated ability to develop interactive dashboards and data visualizations for effective communication of complex information.</p>
 							</article>
 
 						<!-- Work -->
